# NightWatcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md
tests/: diffTest.py  diff_test.cpp  diff_test_live.cpp  fps_meter.cpp  get_key_code.cpp  videoTest.py  webcamTest.py  webcam_test.cpp
